--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,189 @@
-langchain
-sentence_transformers
-torch
-pypdf
-qdrant-client
- os
-streamlit
-numpy 
-pandas
-faiss
-langchain.schema 
-langchain.text_splitter 
-langchain.document_loaders
-dotenv 
-google.generativeai 
-groq
-time
-qdrant_client 
-langchain.vectorstores 
-langchain.embeddings 
-langchain.chains 
-langchain.memory 
-langchain_groq 
-PyPDF2 
+accelerate                   1.0.1
+aiohappyeyeballs             2.4.3
+aiohttp                      3.10.10
+aiosignal                    1.3.1
+altair                       5.4.1
+annotated-types              0.7.0
+anyio                        4.6.2.post1
+attrs                        24.2.0
+backoff                      2.2.1
+beautifulsoup4               4.12.3
+bertopic                     0.16.4
+blinker                      1.8.2
+blis                         1.0.1
+cachetools                   5.5.0
+catalogue                    2.0.10
+certifi                      2024.8.30
+cffi                         1.17.1
+chardet                      3.0.4
+charset-normalizer           3.4.0
+click                        8.1.7
+cloudpathlib                 0.20.0
+colorama                     0.4.6
+confection                   0.1.5
+contourpy                    1.3.0
+cryptography                 43.0.3
+cycler                       0.12.1
+cymem                        2.0.8
+dataclasses-json             0.6.7
+deep-translator              1.11.4
+diffusers                    0.30.3
+distro                       1.9.0
+emoji                        2.14.0
+eval_type_backport           0.2.0
+faiss-cpu                    1.9.0
+filelock                     3.16.1
+filetype                     1.2.0
+fonttools                    4.54.1
+frozenlist                   1.4.1
+fsspec                       2024.10.0
+gensim                       4.3.3
+gitdb                        4.0.11
+GitPython                    3.1.43
+google-ai-generativelanguage 0.6.10
+google-api-core              2.21.0
+google-api-python-client     2.149.0
+google-auth                  2.35.0
+google-auth-httplib2         0.2.0
+google-generativeai          0.8.3
+googleapis-common-protos     1.65.0
+googletrans                  4.0.0rc1
+greenlet                     3.1.1
+groq                         0.11.0
+grpcio                       1.67.0
+grpcio-status                1.67.0
+grpcio-tools                 1.67.0
+h11                          0.14.0
+h2                           3.2.0
+hdbscan                      0.8.39
+hpack                        3.0.0
+hstspreload                  2024.10.1
+httpcore                     1.0.6
+httplib2                     0.22.0
+httpx                        0.27.2
+huggingface-hub              0.26.0
+hyperframe                   5.2.0
+idna                         2.10
+importlib_metadata           8.5.0
+Jinja2                       3.1.4
+joblib                       1.4.2
+jsonpatch                    1.33
+jsonpath-python              1.0.6
+jsonpointer                  3.0.0
+jsonschema                   4.23.0
+jsonschema-specifications    2024.10.1
+kiwisolver                   1.4.7
+langchain                    0.3.4
+langchain-community          0.3.3
+langchain-core               0.3.12
+langchain-groq               0.2.0
+langchain-text-splitters     0.3.0
+langcodes                    3.4.1
+langdetect                   1.0.9
+langsmith                    0.1.137
+language_data                1.2.0
+llvmlite                     0.43.0
+lxml                         5.3.0
+marisa-trie                  1.2.1
+markdown-it-py               3.0.0
+MarkupSafe                   3.0.2
+marshmallow                  3.23.0
+matplotlib                   3.9.2
+mdurl                        0.1.2
+mpmath                       1.3.0
+multidict                    6.1.0
+murmurhash                   1.0.10
+mypy-extensions              1.0.0
+narwhals                     1.9.4
+nest-asyncio                 1.6.0
+networkx                     3.4.1
+nltk                         3.9.1
+numba                        0.60.0
+numpy                        1.26.4
+olefile                      0.47
+orjson                       3.10.9
+packaging                    24.1
+pandas                       2.2.3
+pillow                       10.4.0
+pip                          24.2
+plotly                       5.24.1
+portalocker                  2.10.1
+preshed                      3.0.9
+propcache                    0.2.0
+proto-plus                   1.24.0
+protobuf                     5.28.2
+psutil                       6.1.0
+pyarrow                      17.0.0
+pyasn1                       0.6.1
+pyasn1_modules               0.4.1
+pycparser                    2.22
+pydantic                     2.9.2
+pydantic_core                2.23.4
+pydantic-settings            2.6.0
+pydeck                       0.9.1
+Pygments                     2.18.0
+pynndescent                  0.5.13
+pyparsing                    3.2.0
+pypdf                        5.0.1
+PyPDF2                       3.0.1
+python-dateutil              2.8.2
+python-dotenv                1.0.1
+python-iso639                2024.4.27
+python-magic                 0.4.27
+python-oxmsg                 0.0.1
+pytz                         2024.2
+pywin32                      308
+PyYAML                       6.0.2
+qdrant-client                1.12.0
+RapidFuzz                    3.10.0
+referencing                  0.35.1
+regex                        2024.9.11
+requests                     2.32.3
+requests-toolbelt            1.0.0
+rfc3986                      1.5.0
+rich                         13.9.2
+rpds-py                      0.20.0
+rsa                          4.9
+safetensors                  0.4.5
+scikit-learn                 1.5.2
+scipy                        1.13.1
+seaborn                      0.13.2
+sentence-transformers        3.2.0
+setuptools                   75.2.0
+shellingham                  1.5.4
+six                          1.16.0
+smart-open                   7.0.5
+smmap                        5.0.1
+sniffio                      1.3.1
+soupsieve                    2.6
+SQLAlchemy                   2.0.36
+srsly                        2.4.8
+streamlit                    1.39.0
+sympy                        1.13.1
+tabulate                     0.9.0
+tenacity                     9.0.0
+textblob                     0.18.0.post0
+thinc                        8.3.2
+threadpoolctl                3.5.0
+tokenizers                   0.20.1
+toml                         0.10.2
+torch                        2.5.0
+tornado                      6.4.1
+tqdm                         4.66.5
+transformers                 4.45.2
+typer                        0.12.5
+typing_extensions            4.12.2
+typing-inspect               0.9.0
+tzdata                       2024.2
+umap-learn                   0.5.6
+unstructured                 0.16.0
+unstructured-client          0.26.1
+uritemplate                  4.1.1
+urllib3                      2.2.3
+vaderSentiment               3.3.2
+wasabi                       1.1.3
+watchdog                     5.0.3
+weasel                       0.4.1
+wrapt                        1.16.0
+yarl                         1.15.5
+zipp                         3.20.2
